# webserver

./: .gitignore  Makefile  README.md  constants.h  helpers.c  main.c  meson.build  meson.sh  note.txt
files/: index.html  mallard.html
src/: common.c  common.h  concurrencyhelpers.c  connection.c  connection.h  constants.h  contenttype.c  contenttype.h  custom.c  custom.h  files.c  files.h  hash.c  hash.h  hashtable.c  hashtable.h  headerFns.c  headerFns.h  headers.c  headers.h  headersbase.h  helpers.c  helpers.h  http.c  httpredirect.c  logging.c  logging.h  main.c  meson.build  openssl.c  openssl.h  ssl.c  ssl.h  uid.h
src/.networkhelpers/: helpers.c  helpers.h  meson.build
src/common/: common.c  constants.h  headers.h  headersbase.h  helpers.c  helpers.h  meson.build
src/files/: files.c  files.h  meson.build
src/hashtable/: .hashtable.c  hash.c  hash.h  hashtable.c  hashtable.h  hashtableG.c  hashtableG.h  meson.build
src/headers/: .headerpriv.h  contenttype.c  contenttype.h  custom.c  custom.h  headerFnsht.c  headerFnsht.h  headerfns.c  headerfns.h  headerpriv.h  headers.c  headers.h  headersbase.h  meson.build
src/helpers/: helpers.c  helpers.h  meson.build
src/helpers/bool/: bool.h
src/helpers/hashtable/: hash.c  hash.h  hashtableG.c  hashtableG.h  meson.build  stringhash.c
src/helpers/strings/: strings.c  strings.h
src/http/: helpers.c  meson.build  response.c  response.h  statuscodes.h
src/http/headers/: helpers.c  helpers.h
src/http/headers/request/: headerfns.c  requestheaders.c  requestheaders.h  requestheadersbase.h
src/http/headers/response/: contenttype.c  contenttype.h  headers.c  headers.h  responseheadersbase.h
src/http/request/: headerfns.c  headerfns.h  requestheaders.c  requestheaders.h
src/http/response/: contenttype.c  contenttype.h  custom.c  custom.h  headers.c  headers.h  response.c  response.h
src/ssl/: meson.build  ssl.c  ssl.h
src/strings/: meson.build  strings.c  strings.h
src/wrappers/: concurrencywrappers.c  concurrencywrappers.h  meson.build  wrappers.c  wrappers.h
